# forecast

./: .cache.sqlite  .gitignore  Readme.MD  main.py  pyproject.toml
config/: settings.py  urls.py
forecast/: models.py  urls.py  views.py
forecast/migrations/: 0001_initial.py  0002_alter_frequentrequest_options.py
forecast/templates/forecast/: base.html  index.html
forecast/templates/forecast/includes/: header.html  nav.html
forecast/utils/: get_json.py
users/: urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: base_users.html  confirm_password.html  email_sent.html  login.html
